--- a/src/Vigilate/MainWindow.xaml
+++ b/src/Vigilate/MainWindow.xaml
@@ -8,6 +8,7 @@
         mc:Ignorable="d"
         WindowStartupLocation="Manual"
         Loaded="Window_Loaded"
+        Closing="Window_Closing"
         Height="216" 
         Width="332">
     <Grid>
