--- a/src/Vigilate/App.xaml
+++ b/src/Vigilate/App.xaml
@@ -2,6 +2,6 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              Startup="Application_Startup"
-             ShutdownMode="OnExplicitShutdown">
-
+             ShutdownMode="OnExplicitShutdown"
+             Exit="Application_Exit">
 </Application>
