--- a/src/Vigilate/MainWindow.xaml
+++ b/src/Vigilate/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="VigilateUI.MainWindow"
+﻿<Window x:Class="Vigilate.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
