--- a/src/Vigilate.Installer/VigilateInstallerConfiguration.wxs
+++ b/src/Vigilate.Installer/VigilateInstallerConfiguration.wxs
@@ -1,8 +1,8 @@
 ﻿<?include $(sys.SOURCEFILEDIR)Includes.wxi?>
 <Wix xmlns="http://wixtoolset.org/schemas/v4/wxs" xmlns:ui="http://wixtoolset.org/schemas/v4/wxs/ui">
-	<Package Name="$(var.ProductName)" Language="1033" Version="!(bind.fileVersion.vigilate)" Manufacturer="$(var.CompanyName)" UpgradeCode="CBB77BD5-950B-47E5-B681-F464EE773F4C"><MajorUpgrade DowngradeErrorMessage="A newer version of $(var.ProductName) is already installed." AllowSameVersionUpgrades="yes" />
-		<MediaTemplate EmbedCab="yes" />
-		<Property Id="REINSTALLMODE" Value="amus" />
+	<Package Name="$(var.ProductName)" Language="1033" Version="!(bind.fileVersion.vigilate)" Manufacturer="$(var.CompanyName)" UpgradeCode="CBB77BD5-950B-47E5-B681-F464EE773F4C">
+		<MajorUpgrade DowngradeErrorMessage="A newer version of $(var.ProductName) is already installed." />
+		<MediaTemplate EmbedCab="yes" MaximumUncompressedMediaSize="2"/>
 
 		<Launch Condition="Privileged" Message="You must be an administrator to install this product" />
 		<Feature Id="Vigilate_Version" Title="Vigilate_Version" Level="1" />
@@ -21,7 +21,7 @@
 
 		<Property Id="WIXUI_EXITDIALOGOPTIONALCHECKBOXTEXT" Value="Launch Vigilate" />
 
-		<Property Id="WixShellExecTarget" Value="[INSTALLFOLDER]Vigilate.exe" />
+		<SetProperty Id="WixShellExecTarget" Value="[INSTALLFOLDER]Vigilate.exe" After="CostFinalize" />
 		<CustomAction Id="LaunchApplication" DllEntry="WixShellExec" Impersonate="yes" BinaryRef="Wix4UtilCA_X86" />
 
 		<UIRef Id="WixUI_ErrorProgressText" />
@@ -33,28 +33,26 @@
 		<UIRef Id="WixUI_ErrorProgressText" />
 		<Property Id="DISABLEADVTSHORTCUTS" Value="1" />
 		<Property Id="WIXUI_INSTALLDIR" Value="INSTALLFOLDER" />
-		
-	
 
-			<StandardDirectory Id="ProgramFiles64Folder">
-				<Directory Id="ManufacturerFolder" Name="$(var.CompanyName)">
-					<Directory Id="INSTALLFOLDER" Name="$(var.ProductName)">
-						<Component Feature="Vigilate_Version">
-							<File Id="vigilate" Source="$(var.Vigilate.TargetDir)Vigilate.exe" Vital="yes" KeyPath="yes" />
-						</Component>
-					</Directory>
-				</Directory>
-			</StandardDirectory>
-
-			<StandardDirectory Id="ProgramMenuFolder">
-				<Directory Id="StartUp" Name="Startup">
-					<Component Id="ApplicationShortcutStartMenu" Guid="{8861A329-AB3D-4614-84D6-297E2633B28C}">
-						<Shortcut Id="ApplicationStartMenuShortcut" Name="Vigilate" Description="Launch Vigilate" Target="[INSTALLFOLDER]Vigilate.exe" WorkingDirectory="INSTALLFOLDER" />
-						<RemoveFolder Id="ProgramMenuFolder" On="uninstall" />
-						<RegistryValue Root="HKCU" Key="Software\$(var.CompanyName)\$(var.ProductName)" Name="StartUpShortcut" Type="integer" Value="1" KeyPath="yes" />
+		<StandardDirectory Id="ProgramFiles64Folder">
+			<Directory Id="ManufacturerFolder" Name="$(var.CompanyName)">
+				<Directory Id="INSTALLFOLDER" Name="$(var.ProductName)">
+					<Component Feature="Vigilate_Version">
+						<File Id="vigilate" Source="$(var.Vigilate.TargetDir)Vigilate.exe" Vital="yes" KeyPath="yes" />
 					</Component>
 				</Directory>
-			</StandardDirectory>
+			</Directory>
+		</StandardDirectory>
 
-		</Package>
+		<StandardDirectory Id="ProgramMenuFolder">
+			<Directory Id="StartUp" Name="Startup">
+				<Component Id="ApplicationShortcutStartMenu" Guid="{8861A329-AB3D-4614-84D6-297E2633B28C}">
+					<Shortcut Id="ApplicationStartMenuShortcut" Name="Vigilate" Description="Launch Vigilate" Target="[INSTALLFOLDER]Vigilate.exe" WorkingDirectory="INSTALLFOLDER" />
+					<RemoveFolder Id="ProgramMenuFolder" On="uninstall" />
+					<RegistryValue Root="HKCU" Key="Software\$(var.CompanyName)\$(var.ProductName)" Name="StartUpShortcut" Type="integer" Value="1" KeyPath="yes" />
+				</Component>
+			</Directory>
+		</StandardDirectory>
+
+	</Package>
 </Wix>
